--- a/thirtyone-backend/Cargo.toml
+++ b/thirtyone-backend/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures-util = "0.3.17"
+log = "0.4.14"
+pretty_env_logger = "0.4.0"
+rand = "0.8.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
+tokio-tungstenite = "0.15.0"
+
+[features]
