--- a/thirtyone-frontend/package.json
+++ b/thirtyone-frontend/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@xstate/react": "^1.6.1",
+    "jotai": "^1.3.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.3.0"
+    "xstate": "^4.25.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
