--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,13 @@ jobs:
         with:
           toolchain: stable
           target: aarch64-unknown-linux-gnu
+          args: --manifest-path thirtyone-backend/Cargo.toml
           override: true
       - uses: actions-rs/cargo@v1
         with:
           use-cross: true
-          working-directory: ./thirtyone-backend
           command: build
-          args: --target aarch64-unknown-linux-gnu
+          args: --target aarch64-unknown-linux-gnu --manifest-path thirtyone-backend/Cargo.toml
   frontend:
     name: Frontend
     runs-on: ubuntu-latest
@@ -30,8 +30,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-          cache: 'npm'
-          cache-dependency-path: thirtyone-frontend/package-lock.json
       - run: npm install
         working-directory: ./thirtyone-frontend
       - run: npm build
