--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,5 @@ jobs:
           node-version: '14'
       - run: npm install
         working-directory: ./thirtyone-frontend
-      - run: npm build
+      - run: npm run build
         working-directory: ./thirtyone-frontend
