--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         run: cargo install cross
       - name: Build
         working-directory: thirtyone-backend
-        run: cross build --target aarch64-unknown-linux-gnu
+        run: cross build --target aarch64-unknown-linux-gnu --release
       - name: Archive backend artifact
         uses: actions/upload-artifact@v2
         with:
