--- a/thirtyone-frontend/package.json
+++ b/thirtyone-frontend/package.json
@@ -11,6 +11,7 @@
     "@xstate/react": "^1.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-spinners": "^0.11.0",
     "xstate": "^4.25.0"
   },
   "devDependencies": {
